[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[dependencies]
# 锁定到一小时前稳定版本，避开 Ekubo 内部编译冲突
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", rev = "d1b732c", features = ["evm"] }

tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
num-bigint = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }